@@ -220,7 +220,9 @@ Release 0.9.10
   template names in setting 'zenmagick.mvc.templates.simpleCache.templates'
 	to decide whether a template is cacheable or not
 - add setting 'zenmagick.mvc.templates.simpleCache.cacheTTL'
-
+- add init of default timezone from new setting 'zenmagick.core.date.timezone'
+  and re-init the setting with the actually used timezone (should be the same
+	as long as the setting is valid)
 
 Release 0.9.9
 - in ZMDbTableMapper handle database exception building auto mappings
